# CourseCraft

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/ai_generation/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/ai_generation/migrations/: 0001_initial.py
backend/config/: asgi.py  celery.py  settings.py  urls.py
backend/courses/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/courses/migrations/: 0001_initial.py
backend/src/: app.module.ts  main.ts
backend/src/ai-generation/: ai-generation.module.ts  ai-generation.service.ts  llm-factory.service.ts  orchestrator.service.ts
backend/src/ai-generation/agents/: creator.agent.ts  reviewer.agent.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/config/: configuration.ts  env.validation.ts
backend/src/courses/: courses.controller.ts  courses.module.ts  courses.service.ts  questions.controller.ts
backend/src/database/: data-source.ts  database.module.ts
backend/src/generation-tasks/: generation-tasks.module.ts
backend/src/users/: users.service.ts
backend/src/websocket/: course-generation.gateway.ts  snapshot.controller.ts  snapshot.service.ts  test.controller.ts  websocket.module.ts
backend/users/: urls.py  views.py
frontend/: .dockerignore  (+10 more)
(+84 files in other folders)
